--- a/3DEngine/3DEngine.vcxproj
+++ b/3DEngine/3DEngine.vcxproj
@@ -164,6 +164,7 @@
   <ItemGroup>
     <ClInclude Include="..\include\functionality.h" />
     <ClInclude Include="..\include\GraphicsSystem.h" />
+    <ClInclude Include="..\include\InputManager.h" />
     <ClInclude Include="..\include\stb_image.h" />
     <ClInclude Include="..\include\Window.h" />
     <ClInclude Include="stdafx.h" />
@@ -173,6 +174,7 @@
     <ClInclude Include="..\include\Engine.h" />
     <ClCompile Include="..\src\functionality.cpp" />
     <ClCompile Include="..\src\GraphicsSystem.cpp" />
+    <ClCompile Include="..\src\InputManager.cpp" />
     <ClCompile Include="..\src\Window.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
