--- a/3DEngine/3DEngine.vcxproj
+++ b/3DEngine/3DEngine.vcxproj
@@ -23,7 +23,7 @@
     <ProjectGuid>{A570A02C-DFA0-4418-9D00-46CA9C0017C6}</ProjectGuid>
     <Keyword>Win32Proj</Keyword>
     <RootNamespace>My3DEngine</RootNamespace>
-    <WindowsTargetPlatformVersion>10.0.18362.0</WindowsTargetPlatformVersion>
+    <WindowsTargetPlatformVersion>10.0.17763.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
@@ -105,7 +105,7 @@
       <GenerateDebugInformation>true</GenerateDebugInformation>
     </Link>
     <Lib>
-      <AdditionalDependencies>glfw3.lib;</AdditionalDependencies>
+      <AdditionalDependencies>assimp-vc141-mtd.lib;glfw3.lib;</AdditionalDependencies>
     </Lib>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
@@ -165,6 +165,8 @@
     <ClInclude Include="..\include\functionality.h" />
     <ClInclude Include="..\include\GraphicsSystem.h" />
     <ClInclude Include="..\include\InputManager.h" />
+    <ClInclude Include="..\include\Mesh.h" />
+    <ClInclude Include="..\include\Shader.h" />
     <ClInclude Include="..\include\stb_image.h" />
     <ClInclude Include="..\include\Window.h" />
     <ClInclude Include="stdafx.h" />
@@ -172,9 +174,12 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\include\Engine.h" />
+    <ClCompile Include="..\external\glad.c" />
     <ClCompile Include="..\src\functionality.cpp" />
     <ClCompile Include="..\src\GraphicsSystem.cpp" />
     <ClCompile Include="..\src\InputManager.cpp" />
+    <ClCompile Include="..\src\Mesh.cpp" />
+    <ClCompile Include="..\src\Shader.cpp" />
     <ClCompile Include="..\src\Window.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
