--- a/3DEngine/3DEngine.vcxproj.filters
+++ b/3DEngine/3DEngine.vcxproj.filters
@@ -57,6 +57,12 @@
     <ClInclude Include="..\include\InputManager.h">
       <Filter>Header Files\io</Filter>
     </ClInclude>
+    <ClInclude Include="..\include\Mesh.h">
+      <Filter>Header Files\Graphics</Filter>
+    </ClInclude>
+    <ClInclude Include="..\include\Shader.h">
+      <Filter>Header Files\Graphics</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
@@ -73,6 +79,15 @@
     </ClCompile>
     <ClCompile Include="..\src\InputManager.cpp">
       <Filter>Source Files\io</Filter>
+    </ClCompile>
+    <ClCompile Include="..\external\glad.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="..\src\Mesh.cpp">
+      <Filter>Source Files\Graphics</Filter>
+    </ClCompile>
+    <ClCompile Include="..\src\Shader.cpp">
+      <Filter>Source Files\Graphics</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
