--- a/3DEngine/3DEngine.vcxproj
+++ b/3DEngine/3DEngine.vcxproj
@@ -166,6 +166,7 @@
     <ClInclude Include="..\include\GraphicsSystem.h" />
     <ClInclude Include="..\include\InputManager.h" />
     <ClInclude Include="..\include\Mesh.h" />
+    <ClInclude Include="..\include\Model.h" />
     <ClInclude Include="..\include\Shader.h" />
     <ClInclude Include="..\include\stb_image.h" />
     <ClInclude Include="..\include\Window.h" />
@@ -179,6 +180,7 @@
     <ClCompile Include="..\src\GraphicsSystem.cpp" />
     <ClCompile Include="..\src\InputManager.cpp" />
     <ClCompile Include="..\src\Mesh.cpp" />
+    <ClCompile Include="..\src\Model.cpp" />
     <ClCompile Include="..\src\Shader.cpp" />
     <ClCompile Include="..\src\Window.cpp" />
     <ClCompile Include="stdafx.cpp">
